# kernel-fuzzer-for-kvm

./: .gitmodules  Makefile.am  configure.ac
patches/: 0001-AFLplusplus-Xen-mode.patch
src/: afl.c  breakpoint.c  breakpoint.h  fuzz.c  fuzz.h  main.c  private.h  signal.c  sink.h  tracer.c  tracer.h  tracer_dynamic.c  vmi.c  vmi.h
